--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           </div>
         </div>
       </div>
-      <div class="cpontainer-3 my-3">
+      <div class="container-3 my-3">
         <div class="row">
           <div class="col">
             <button
